nginx-test/uptime-kuma/kuma.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitorizacion
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uptime-kuma
  namespace: monitorizacion
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: uptime-kuma
  template:
    metadata:
      labels:
        app: uptime-kuma
    spec:
      containers:
      - name: uptime-kuma
        image: louislam/uptime-kuma:1
        ports:
        - containerPort: 3001
        volumeMounts:
        - mountPath: /app/data
          name: data-volume
      volumes:
      - name: data-volume
        persistentVolumeClaim:
          claimName: uptime-kuma-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma-svc
  namespace: monitorizacion
spec:
  selector:
    app: uptime-kuma
  ports:
  - port: 80
    targetPort: 3001
